# OpenAlexProject

./: .dockerignore  .env.docker.example  .gitignore  Installation guide.md  PROJECT_CONTEXT.md  docker-compose.yml  install.py  readme.md  run_tests.py
fakenewscitationnetwork/: .gitignore  install.py  pyproject.toml  pytest.ini  requirements.txt  test.py
fakenewscitationnetwork/ArticleCrawler/: __init__.py  crawler.py
fakenewscitationnetwork/ArticleCrawler/DataManagement/: __init__.py  data_storage.py  json_manager.py  markdown_writer.py  preprint_repo.txt
fakenewscitationnetwork/ArticleCrawler/DataProcessing/: __init__.py  data_frame_filter.py  feature_computer.py
fakenewscitationnetwork/ArticleCrawler/LogManager/: crawler_logger.py  crawler_storage.py
fakenewscitationnetwork/ArticleCrawler/api/: __init__.py  api_factory.py  base_api.py  openalex_api.py  semantic_scholar_api.py
fakenewscitationnetwork/ArticleCrawler/checkpoint/: __init__.py  manager.py
fakenewscitationnetwork/ArticleCrawler/cli/: __init__.py  main.py
fakenewscitationnetwork/ArticleCrawler/config/: __init__.py  api_config.py  crawler_initialization.py  graph_config.py  retraction_config.py  sampling_config.py  stopping_config.py  storage_config.py  temporal_config.py  text_config.py
fakenewscitationnetwork/ArticleCrawler/data/: __init__.py  data_coordinator.py  data_frame_store.py  data_manager.py  frame_manager.py  metadata_parser.py  paper_validator.py  retrieval_service.py  validation_service.py
fakenewscitationnetwork/ArticleCrawler/graph/: __init__.py  graph_manager.py  graph_processing.py
fakenewscitationnetwork/ArticleCrawler/metadata_extraction/: __init__.py  dispatcher.py  factory.py  models.py
fakenewscitationnetwork/ArticleCrawler/normalization/: __init__.py  venue_aliases.py  venue_cleaner.py  venue_fuzzy.py  venue_normalizer.py
fakenewscitationnetwork/ArticleCrawler/papervalidation/: main_fetch_retraction_watch_data.py  retraction_watch_manager.py
fakenewscitationnetwork/ArticleCrawler/pdf_processing/: __init__.py  api_matcher.py  docker_manager.py  grobid_client.py  metadata_extractor.py  models.py  pdf_processor.py
fakenewscitationnetwork/ArticleCrawler/sampling/: sampler.py
fakenewscitationnetwork/ArticleCrawler/text_processing/: __init__.py  preprocessing.py  refined_method_b_strategy.py  text_analyzer.py  topic_companion_writer.py  topic_labeler.py  topic_labeling_strategy.py  (+4 more)
fakenewscitationnetwork/Demo/: check_cli_setup.py  demo.txt  demo_cli.py  demo_crawl_and_analyze.py
fakenewscitationnetwork/articlecrawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fakenewscitationnetwork/data/: venues.json
fakenewscitationnetwork/tests/: __init__.py  conftest.py
(+488 files in other folders)
