[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "articlecrawler"
version = "0.1.0"
description = "Scientific Literature Discovery Tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Iman Mossavat"}, {name = "Bryan Hoppenbrouwer"}
]

dependencies = [
    "networkx",
    "pandas",
    "numpy",
    "scikit-learn",
    "sentence-transformers",
    "python-dotenv",
    "requests",
    "langdetect",
    "nltk",
    "wordcloud",
    "matplotlib",
    "openpyxl",
    "xlsxwriter",
    "tabulate",
    "pyalex",
    "pyzotero",
    "grobid-client-python",
    "scipy",
    "torch",
    "s2",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
crawler = "ArticleCrawler.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ArticleCrawler*"]